[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/characters/enemies/scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/characters/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/ships/enemy-small.png" type="Texture" id=3]
[ext_resource path="res://src/power-ups/SideLasers.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Enemy" groups=[
"enemy",
] instance=ExtResource( 2 )]
collision_layer = 4
script = ExtResource( 1 )
max_health = 20.0
faction = 1
shot_speed = 400.0
shoot_delay = 2.0
power_up_drops = [ ExtResource( 4 ) ]

[node name="Sprite" parent="." index="0"]
position = Vector2( -0.368042, 8.36831e-14 )
rotation = -1.5708
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 3 )
vframes = 1
hframes = 2
frame = 0

[node name="ExplosionSprite" parent="." index="2"]
position = Vector2( 7, 0 )
scale = Vector2( 3, 3 )

[node name="Middle" parent="BulletSpawns" index="0"]
position = Vector2( 24.2301, -0.0451431 )

[node name="ShootTimer" type="Timer" parent="." index="5"]

[node name="EnemyAnimations" type="AnimationPlayer" parent="." index="6"]
anims/fly = SubResource( 2 )
[connection signal="died" from="." to="." method="_on_Enemy_died"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
